--- a/Showcase/Views/Shared/_Footer.cshtml
+++ b/Showcase/Views/Shared/_Footer.cshtml
@@ -3,11 +3,7 @@
     <div class="s-footer-container container-fluid">
         <div class="s-footer-top">
                 <div class="row row-grid align-items-center mb-5">
-                    <div class="col-lg-6">
-                        <h3 class="text-primary font-weight-light mb-2">Thank you for supporting us!</h3>
-                        <h4 class="mb-0 font-weight-light">Let's get in touch on any of these platforms.</h4>
-                    </div>
-                    <div class="col-lg-6 text-lg-center btn-wrapper">
+                    <div class="col-lg-12 text-lg-center btn-wrapper">
                         <a target="_blank" href="https://twitter.com/creativetim" class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" data-toggle="tooltip" data-original-title="Follow us">
                             <i class="fa fa-twitter"></i>
                         </a>
@@ -28,11 +24,8 @@
 
             <div class="s-footer-bottom">
                 <div class="row">
-                    <div class="col-sm-6">
-
-                    </div>
-                    <div class="col-sm-6">
-                        &copy; @DateTime.Now.Year - Showcase
+                    <div class="col-sm-12">
+                        &copy; @DateTime.Now.Year - Developer Start
                     </div>
                 </div>
             </div>
