--- a/Showcase/Views/Home/About.cshtml
+++ b/Showcase/Views/Home/About.cshtml
@@ -30,7 +30,7 @@
                         <div class="col-lg-3 order-lg-2">
                             <div class="card-profile-image">
                                 <a href="#">
-                                    <img src="../assets/img/theme/team-4-800x800.jpg" class="rounded-circle">
+                                    <img src="~/Content/images/nate-johnson-profile-2.jpg" class="rounded-circle">
                                 </a>
                             </div>
                         </div>
@@ -58,19 +58,18 @@
                         </div>
                     </div>
                     <div class="text-center mt-5">
-                        <h3>
-                            Jessica Jones
-                            <span class="font-weight-light">, 27</span>
+                        <h3 clas="s-author-title">Nathan Johnson
+                            <span class="font-weight-light">, 32</span>
                         </h3>
-                        <div class="h6 font-weight-300"><i class="ni location_pin mr-2"></i>Bucharest, Romania</div>
-                        <div class="h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer</div>
-                        <div><i class="ni education_hat mr-2"></i>University of Computer Science</div>
+                        <div class="s-author-details h6 font-weight-300"><i class="ni location_pin mr-2"></i>Eugene, Oregon</div>
+                        <div class="s-author-details h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Web Developer, Computer Programmer</div>
+                        <div><i class="s-author-details ni education_hat mr-2"></i>Grove City College 09'</div>
                     </div>
                     <div class="mt-5 py-5 border-top text-center">
                         <div class="row justify-content-center">
                             <div class="col-lg-9">
-                                <p>An artist of considerable range, Ryan — the name taken by Melbourne-raised, Brooklyn-based Nick Murphy — writes, performs and records all of his own music, giving it a warm, intimate feel with a solid groove structure. An artist of considerable range.</p>
-                                <a href="#">Show more</a>
+                                <p class="s-post-text">Hi There. My name is Nate and I’m a web developer. I build websites and web applications using primarily ASP.NET MVC/C#. In my spare time, I enjoy exploring the outdoors, listening to music, and learning about computer programming. I currently live in Eugene, Oregon located in the Pacific Northwest. On any given day, you will usually find me behind a computer, out on the running trails or grooving to live music.</p>
+                                <a href="#">More About Me</a>
                             </div>
                         </div>
                     </div>
