--- a/Showcase/Views/Shared/_Head.cshtml
+++ b/Showcase/Views/Shared/_Head.cshtml
@@ -7,7 +7,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-    <!-- Fonts -->
+    <!-- Extra Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Exo%3A400%2C500%2C600%2C700&#038;ver=5.0.3" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif%3A400%2C700&#038;ver=5.0.3" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900" rel="stylesheet">
 </head>
