--- a/Showcase/Views/Home/Index.cshtml
+++ b/Showcase/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
     </section>
     <section class="section">
         <div class="container">
-            <div class="card card-profile shadow mt--300">
+            <div class="card card-profile mt--300">
                 <div class="px-4">
                     <div class="row justify-content-center">
                         <div class="col-lg-3 order-lg-2">
@@ -58,11 +58,11 @@
                         </div>
                     </div>
                     <div class="text-center mt-5">
-                        <h3 clas="s-author-title">
+                        <h1 class="s-author-title">
                             Nathan Johnson
-                            <span class="font-weight-light">, 32</span>
-                        </h3>
-                        <div class="s-author-details h6 font-weight-300"><i class="ni location_pin mr-2"></i>Eugene, Oregon</div>
+                            <span class="font-weight-light"></span>
+                        </h1>
+                        <div class="s-author-details h6 font-weight-300"><i class="ni location_pin mr-2"></i>Eugene, Oregon U.S.A</div>
                         <div class="s-author-details h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Web Developer, Computer Programmer</div>
                         <div><i class="s-author-details ni education_hat mr-2"></i>Grove City College 09'</div>
                     </div>
@@ -70,7 +70,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-9">
                                 <p class="s-post-text">Hi There. My name is Nate and I’m a web developer. I build websites and web applications using primarily ASP.NET MVC/C#. In my spare time, I enjoy exploring the outdoors, listening to music, and learning about computer programming. I currently live in Eugene, Oregon located in the Pacific Northwest. On any given day, you will usually find me behind a computer, out on the running trails or grooving to live music.</p>
-                                <a href="#">More About Me</a>
+                                <a href="/Home/About">Want to Learn More?</a>
                             </div>
                         </div>
                     </div>
