--- a/Showcase/Views/Shared/_BlogLeftLayout.cshtml
+++ b/Showcase/Views/Shared/_BlogLeftLayout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 @Html.Partial("_Head")
 <body>
-    @Html.Partial("_Header")
+    @Html.Partial("_StaticHeader")
 
     <div id="s-body" class="container-fluid body-content">
         <div class="row">
