--- a/Showcase/Views/Shared/_Footer.cshtml
+++ b/Showcase/Views/Shared/_Footer.cshtml
@@ -1,31 +1,37 @@
 ﻿
 <div class="s-footer-wrap">
     <div class="s-footer-container container-fluid">
-        <div class="s-footer-top">
-                <div class="row row-grid align-items-center mb-5">
-                    <div class="col-lg-12 text-lg-center btn-wrapper">
-                        <a target="_blank" href="https://twitter.com/creativetim" class="btn btn-neutral btn-icon-only btn-twitter btn-round btn-lg" data-toggle="tooltip" data-original-title="Follow us">
-                            <i class="fa fa-twitter"></i>
-                        </a>
-                        <a target="_blank" href="https://www.facebook.com/creativetim" class="btn btn-neutral btn-icon-only btn-facebook btn-round btn-lg" data-toggle="tooltip" data-original-title="Like us">
-                            <i class="fa fa-facebook-square"></i>
-                        </a>
-                        <a target="_blank" href="https://dribbble.com/creativetim" class="btn btn-neutral btn-icon-only btn-dribbble btn-lg btn-round" data-toggle="tooltip" data-original-title="Follow us">
-                            <i class="fa fa-dribbble"></i>
-                        </a>
-                        <a target="_blank" href="https://github.com/creativetimofficial" class="btn btn-neutral btn-icon-only btn-github btn-round btn-lg" data-toggle="tooltip" data-original-title="Star on Github">
-                            <i class="fa fa-github"></i>
-                        </a>
-                    </div>
-                </div>
-                <hr>
+        <div class="s-footer-top">   
+
+            <div class="s-footer-logo">
+                <img src="~/Content/images/developer-start-bottom-logo.png" />
+            </div>
                 
             </div>
 
             <div class="s-footer-bottom">
                 <div class="row">
                     <div class="col-sm-12">
-                        &copy; @DateTime.Now.Year - Developer Start
+                        <div class="row row-grid align-items-center">
+                            <div class="col-lg-12 text-lg-center btn-wrapper">
+                                <a target="_blank" href="https://www.facebook.com/creativetim" data-toggle="tooltip" data-original-title="Like us">
+                                    <i class="fa fa-facebook-square"></i>
+                                </a>
+                                <a target="_blank" href="https://dribbble.com/creativetim" data-toggle="tooltip" data-original-title="Follow us">
+                                    <i class="fa fa-instagram"></i>
+                                </a>
+                                <a target="_blank" href="https://twitter.com/creativetim" data-toggle="tooltip" data-original-title="Follow us">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>                              
+                                <a target="_blank" href="https://github.com/creativetimofficial" data-toggle="tooltip" data-original-title="Star on Github">
+                                    <i class="fa fa-github"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <p class="s-footer-date">
+                            &copy; @DateTime.Now.Year - Developer Start
+                        </p>
                     </div>
                 </div>
             </div>
