--- a/Showcase/Views/Shared/_SocialMenu.cshtml
+++ b/Showcase/Views/Shared/_SocialMenu.cshtml
@@ -13,9 +13,9 @@
         </a>
     </li>
     <li class="nav-item">
-        <a class="nav-link nav-link-icon" href="https://twitter.com/creativetim" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
-            <i class="fa fa-twitter-square"></i>
-            <span class="nav-link-inner--text d-lg-none">Twitter</span>
+        <a class="nav-link nav-link-icon" href="" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
+            <i class="fa fa-linkedin"></i>
+            <span class="nav-link-inner--text d-lg-none">Linked In</span>
         </a>
     </li>
     <li class="nav-item">
