--- a/Showcase/Views/Shared/_StaticHeader.cshtml
+++ b/Showcase/Views/Shared/_StaticHeader.cshtml
@@ -1,6 +1,7 @@
 ﻿
-<header class="header-global">
-    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
+
+<header class="header-global s-static-header">
+    <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent s-navbar-blue navbar-light">
         <div class="container">
             <a class="navbar-brand mr-lg-5" href="/Home/Index">
                 <img src="/Content/images/white-logo-sm.png">
