--- a/Showcase/Views/Shared/_Head.cshtml
+++ b/Showcase/Views/Shared/_Head.cshtml
@@ -12,4 +12,5 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif%3A400%2C700&#038;ver=5.0.3" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto%3A300%2C400%2C500%2C700&amp;ver=4.9.8" rel="stylesheet" />
 </head>
