--- a/Showcase/Views/Manage/ManageLogins.cshtml
+++ b/Showcase/Views/Manage/ManageLogins.cshtml
@@ -2,9 +2,8 @@
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
