--- a/Showcase/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Showcase/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,16 +1,15 @@
 ﻿@model Showcase.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
-    Layout = "~/Views/Shared/_HomeLayout.cshtml";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-<h2>@ViewBag.Title.</h2>
+
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
 
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
 
-    <h4>Association Form</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
@@ -18,16 +17,21 @@
         Please enter a user name for this site below and click the Register button to finish
         logging in.
     </p>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+        <p class="s-error-message">
             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+        </p>
+        <div class="input-group input-group-alternative mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+            </div>
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email", @type = "email" })
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+            <input id="s-login-submit" type="submit" class="btn btn-default" value="Register" />
         </div>
     </div>
 }
