--- a/Showcase/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Showcase/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
-    Layout = "~/Views/Shared/_HomeLayout.cshtml";
+    ViewBag.Title = "Password Confirmation Sent";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
 <div>
     <p>
         Please check your email to reset your password.
