--- a/Showcase/Views/Account/Login.cshtml
+++ b/Showcase/Views/Account/Login.cshtml
@@ -2,166 +2,60 @@
 @model LoginViewModel
 
 @{
-    ViewBag.Title = "Log in";
-    Layout = "~/Views/Shared/_HomeLayout.cshtml";
+    ViewBag.Title = "Account Login";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
-
-<div class="s-login-wrap">
-
-    <main>
-        <section class="section section-shaped section-lg">
-            <div class="shape shape-style-1 bg-gradient-default">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
+    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @id = "s-login-form", @class = "form-horizontal", role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    
+        <div class="form-group">
+            <p class="s-error-message">
+                @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+            </p>
+            <div class="input-group input-group-alternative mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-email-83"></i></span>
+                </div>                                       
+                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email", @type = "email" })
             </div>
-            <div class="container pt-lg-md">
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="card bg-secondary shadow border-0">
-                            <div class="card-header bg-white pb-5">
-                                <div class="text-muted text-center mb-3">
-                                    <small>Sign up with</small>
-                                </div>
-                                <div class="text-center">
-                                    <a href="#" class="btn btn-neutral btn-icon mr-4">
-                                        <span class="btn-inner--icon">
-                                            <img src="../assets/img/icons/common/github.svg">
-                                        </span>
-                                        <span class="btn-inner--text">Github</span>
-                                    </a>
-                                    <a href="#" class="btn btn-neutral btn-icon">
-                                        <span class="btn-inner--icon">
-                                            <img src="../assets/img/icons/common/google.svg">
-                                        </span>
-                                        <span class="btn-inner--text">Google</span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="card-body px-lg-5 py-lg-5">
-                                <div class="text-center text-muted mb-4">
-                                    <small>Or sign up with credentials</small>
-                                </div>
-                                <form role="form">
-                                    <div class="form-group">
-                                        <div class="input-group input-group-alternative mb-3">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
-                                            </div>
-                                            <input class="form-control" placeholder="Name" type="text">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="input-group input-group-alternative mb-3">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text"><i class="ni ni-email-83"></i></span>
-                                            </div>
-                                            <input class="form-control" placeholder="Email" type="email">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="input-group input-group-alternative">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
-                                            </div>
-                                            <input class="form-control" placeholder="Password" type="password">
-                                        </div>
-                                    </div>
-                                    <div class="text-muted font-italic">
-                                        <small>
-                                            password strength:
-                                            <span class="text-success font-weight-700">strong</span>
-                                        </small>
-                                    </div>
-                                    <div class="row my-4">
-                                        <div class="col-12">
-                                            <div class="custom-control custom-control-alternative custom-checkbox">
-                                                <input class="custom-control-input" id="customCheckRegister" type="checkbox">
-                                                <label class="custom-control-label" for="customCheckRegister">
-                                                    <span>
-                                                        I agree with the
-                                                        <a href="#">Privacy Policy</a>
-                                                    </span>
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="text-center">
-                                        <button type="button" class="btn btn-primary mt-4">Create account</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        </div>
+
+        <div class="form-group">
+            <p class="s-error-message">
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+            </p>
+            <div class="input-group input-group-alternative">
+                <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+                </div>                                      
+                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password", @type = "password" })                                                
             </div>
-        </section>
-    </main>
+        </div>
 
-</div>
-
-
-<div class="row">
-    <div class="col-md-8">
-        <section id="loginForm">
-
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                @Html.AntiForgeryToken()
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            @Html.CheckBoxFor(m => m.RememberMe)
-                            @Html.LabelFor(m => m.RememberMe)
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
-                    </div>
-                </div>
-                <p>
-                    @Html.ActionLink("Register as a new user", "Register")
+        <div class="form-group">
+            <div class="custom-control custom-control-alternative custom-checkbox">
+                @Html.CheckBoxFor(m => m.RememberMe, new { @id= "customCheckRegister", @class = "custom-control-input", @type="checkbox" })
+                @Html.LabelFor(m => m.RememberMe, new { @class = "custom-control-label", @for= "customCheckRegister" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="text-center">
+                <button id="s-login-submit" type="submit" value="Log in" class="btn">Login</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <p class="s-login-links">
+                    @Html.ActionLink("Create Account", "Register")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+            </div>
+            <div class="col-md-6">
+                <p class="s-login-links">
+                    @Html.ActionLink("Forgot Password?", "ForgotPassword")
+                </p>
+            </div>
+        </div>
+    }
