--- a/Showcase/Views/Home/Index.cshtml
+++ b/Showcase/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-3 order-lg-2">
                             <div class="card-profile-image">
-                                <a href="#">
+                                <a href="/Home/About">
                                     <img src="~/Content/images/nate-johnson-profile-2.jpg" class="rounded-circle">
                                 </a>
                             </div>
