--- a/Showcase/Views/Manage/AddPhoneNumber.cshtml
+++ b/Showcase/Views/Manage/AddPhoneNumber.cshtml
@@ -1,26 +1,29 @@
 ﻿@model Showcase.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("AddPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Add a phone number</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
     <div class="form-group">
-        @Html.LabelFor(m => m.Number, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
+        <p class="s-error-message">
+            @Html.ValidationMessageFor(m => m.Number, "", new { @class = "text-danger" })
+        </p>
+        <div class="input-group input-group-alternative mb-3">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="ni ni-mobile-button"></i></span>
+            </div>
+            @Html.TextBoxFor(m => m.Number, new { @class = "form-control", @placeholder = "Phone Number", @type = "tel" })
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Submit" />
-        </div>
+        <input id="s-login-submit" type="submit" class="btn btn-default" value="Submit" />
     </div>
 }
 
