--- a/Showcase/Views/Manage/ChangePassword.cshtml
+++ b/Showcase/Views/Manage/ChangePassword.cshtml
@@ -1,37 +1,54 @@
 ﻿@model Showcase.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
     <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
     <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+        <p class="s-error-message">
+            @Html.ValidationMessageFor(m => m.OldPassword, "", new { @class = "text-danger" })
+        </p>
+        <div class="input-group input-group-alternative">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+            </div>
+            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", @placeholder = "Old Password", @type = "password" })
         </div>
     </div>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+        <p class="s-error-message">
+            @Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "text-danger" })
+        </p>
+        <div class="input-group input-group-alternative">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+            </div>
+            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "New Password", @type = "password" })
         </div>
     </div>
+
     <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+        <p class="s-error-message">
+            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+        </p>
+        <div class="input-group input-group-alternative">
+            <div class="input-group-prepend">
+                <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
+            </div>
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirm New Password", @type = "password" })
         </div>
     </div>
+
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+        <div class="text-center">
+            <input id="s-login-submit" type="submit" value="Change password" class="btn btn-default" />
         </div>
     </div>
 }
