--- a/Showcase/Views/Manage/Index.cshtml
+++ b/Showcase/Views/Manage/Index.cshtml
@@ -1,13 +1,11 @@
 ﻿@model Showcase.Models.IndexViewModel
 @{
-    ViewBag.Title = "Manage";
+    ViewBag.Title = "Change your Account Settings";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
-    <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>Password:</dt>
@@ -36,7 +34,7 @@
              
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+        
             <dt>Phone Number:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None")
@@ -52,15 +50,14 @@
                 }
                 else
                 {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")&nbsp;&nbsp;]</text>
                 }
             </dd>
-        *@
+        
         <dt>Two-Factor Authentication:</dt>
         <dd>
             <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
+                There are no two-factor authentication providers configured. 
             </p>
             @*@if (Model.TwoFactor)
                 {
