--- a/Showcase/Views/Manage/SetPassword.cshtml
+++ b/Showcase/Views/Manage/SetPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Showcase.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
