--- a/Showcase/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/Showcase/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,9 +1,8 @@
 ﻿@model Showcase.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
+    Layout = "~/Views/Shared/_AccountLayout.cshtml";
 }
-
-<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("VerifyPhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
