--- a/Showcase/Views/Shared/_Header.cshtml
+++ b/Showcase/Views/Shared/_Header.cshtml
@@ -27,7 +27,7 @@
                 <ul class="s-primary-nav navbar-nav navbar-nav-hover align-items-lg-center">
                     <li class="nav-item dropdown">
                         
-                        @Html.ActionLink("Blog", "Index", routeValues: "Home", htmlAttributes: new { @class = "nav-link", data_toggle = "dropdown", href = "#", role = "button" })
+                        @Html.ActionLink("Blog", "Index", routeValues: "Blog", htmlAttributes: new { @class = "nav-link", /*data_toggle = "dropdown",*/ href = "/Blog/", role = "button" })
                             <i class="ni ni-ui-04 d-lg-none"></i>
                         @Html.Partial("_DropDownLarge")
                     </li>
